# threed-comp

./: README.md  chongtian_hanzhang.ipynb  main.py  pyproject.toml
threed_comp/: __init__.py  datasets.py  metadata_modelnet10.csv  model.py  utils.py
