[project]
name = "threed-comp"
version = "0.1.0"
description = "A threed-comp project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "pandas>=2.3.3",
    "pyntcloud>=0.3.1",
    "rerun-notebook>=0.26.0",
    "rerun-sdk>=0.26.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "trimesh>=4.8.3",
]

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[tool.hatch.build.targets.wheel.force-include]
"threed_comp/metadata_modelnet10.csv" = 'threed_comp/metadata_modelnet10.csv'
